--- a/movie/app/build.gradle
+++ b/movie/app/build.gradle
@@ -23,13 +23,13 @@ android {
         }
     }
 
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = '1.8'
     }
 }
 
@@ -39,8 +39,8 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
-    implementation "io.coil-kt:coil:1.0.0-rc3"
-    implementation("io.coil-kt:coil-video:1.0.0-rc3")
+    implementation "io.coil-kt:coil:1.0.0"
+    implementation("io.coil-kt:coil-video:1.0.0")
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
